--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.7"
   }
 }
